--- a/Views/Admin/Student/Create.cshtml
+++ b/Views/Admin/Student/Create.cshtml
@@ -24,6 +24,14 @@
             </div>
         </div>
 
+        <div class="form-group row" style="margin-top:7px">
+            <label asp-for="Score" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <input asp-for="Score" class="form-control" placeholder="Score" />
+                <span asp-validation-for="Score" class="text-danger"></span>
+            </div>
+        </div>
+
         <!-- Password -->
         <div class="form-group row" style="margin-top:7px">
             <label asp-for="Password" class="col-sm-2 col-form-label"></label>
